syntax = "proto3";

package hvxahv.v1alpha1.proto;
option go_package = "github.com/hvxahv/hvxahv/api/activity/v1alpha1";

service Activity {
  rpc CreateInbox (CreateInboxRequest) returns (CreateInboxResponse) {}
  rpc GetInboxByActivityID (GetInboxByActivityIDRequest) returns (GetInboxByActivityIDResponse) {}
  rpc GetInboxesByActivityID (GetInboxesByActivityIDRequest) returns (GetInboxesByActivityIDResponse) {}
  rpc CreateOutbox (CreateOutboxRequest) returns (CreateOutboxResponse) {}
  rpc GetOutboxByActivityID (GetOutboxByActivityIDRequest) returns (GetOutboxByActivityIDResponse) {}
}

message Inboxes {
  string actor_id = 1;
  string activity_id = 2;
  string activity_type = 3;
  bytes activity_body = 4;
}
message CreateInboxRequest {
  string name = 1;
  bytes data = 2;
}

message CreateInboxResponse {
  string code = 1;
  string response = 2;
}

message GetInboxByActivityIDRequest {
  string activity_id = 1;
}

message GetInboxByActivityIDResponse {
  string code = 1;
  Inboxes inbox = 2;
}

message GetInboxesByActivityIDRequest {
  string account_id = 1;
}

message GetInboxesByActivityIDResponse {
  string code = 1;
  repeated Inboxes inboxes = 2;
}

message CreateOutboxRequest {}

message CreateOutboxResponse {}

message GetOutboxByActivityIDRequest {}

message GetOutboxByActivityIDResponse {}
